{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1113,
  "lineage": "8a46802a-0158-8fe3-67f7-4c9df684b028",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a7ff67569643135",
            "domain": "vpc",
            "id": "eipalloc-02a7ff67569643135",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-174-46-231.compute-1.amazonaws.com",
            "public_ip": "35.174.46.231",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "App": "App Migration"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:474180681466:instance/i-0ddb3f32c799034ef",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ddb3f32c799034ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-access",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09a059398dbacfc44",
            "private_dns": "ip-172-31-1-205.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.1.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01b2bfed1556f3117",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20231012190335477700000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b1f96397de9d1270",
            "tags": {
              "Data": "app-hosts",
              "Name": "app-host-0"
            },
            "tags_all": {
              "App": "App Migration",
              "Data": "app-hosts",
              "Name": "app-host-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0584028af4aee17b7"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-elb-bastion-apphost",
            "aws_security_group.allow-web-elb",
            "aws_subnet.private-subnet",
            "data.aws_subnets.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453898e98046c639",
            "arn": "arn:aws:ec2:us-east-1:474180681466:instance/i-04b4508c5bb9c8527",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04b4508c5bb9c8527",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-access",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02a19a94ef395faa8",
            "private_dns": "ip-172-31-2-250.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0682bf891fccd7248",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20231012190335477700000003"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c19eb2d5718e72ed",
            "tags": {
              "Data": "app-hosts",
              "Name": "app-host-1"
            },
            "tags_all": {
              "App": "App Migration",
              "Data": "app-hosts",
              "Name": "app-host-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0584028af4aee17b7"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-elb-bastion-apphost",
            "aws_security_group.allow-web-elb",
            "aws_subnet.private-subnet",
            "data.aws_subnets.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:474180681466:loadbalancer/app/tf-lb-20231012190335481000000004/8fb76d8ba9ea22d5",
            "arn_suffix": "app/tf-lb-20231012190335481000000004/8fb76d8ba9ea22d5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20231012190335481000000004-709772629.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:474180681466:loadbalancer/app/tf-lb-20231012190335481000000004/8fb76d8ba9ea22d5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20231012190335481000000004",
            "preserve_host_header": false,
            "security_groups": [
              "sg-041c28dea805909fc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03c14ae5b0481b727"
              },
              {
                "subnet_id": "subnet-0bcedecf022ecd705"
              }
            ],
            "subnets": [
              "subnet-03c14ae5b0481b727",
              "subnet-0bcedecf022ecd705"
            ],
            "tags": {
              "Name": "public-elb"
            },
            "tags_all": {
              "App": "App Migration",
              "Name": "public-elb"
            },
            "vpc_id": "vpc-07989cc04f4966ee5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow-web-elb",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:474180681466:listener/app/tf-lb-20231012190335481000000004/8fb76d8ba9ea22d5/c373ae6d1a879459",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:474180681466:targetgroup/lb-target-group/a594337f98fbd71a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:474180681466:listener/app/tf-lb-20231012190335481000000004/8fb76d8ba9ea22d5/c373ae6d1a879459",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:474180681466:loadbalancer/app/tf-lb-20231012190335481000000004/8fb76d8ba9ea22d5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "App": "App Migration"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.public-elb",
            "aws_lb_target_group.lb-tg",
            "aws_security_group.allow-web-elb",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:474180681466:targetgroup/lb-target-group/a594337f98fbd71a",
            "arn_suffix": "targetgroup/lb-target-group/a594337f98fbd71a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:474180681466:targetgroup/lb-target-group/a594337f98fbd71a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lb-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "App": "App Migration"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07989cc04f4966ee5"
          },
          "dependencies": [
            "aws_lb.public-elb",
            "aws_security_group.allow-web-elb",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "elb-targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:474180681466:targetgroup/lb-target-group/a594337f98fbd71a-2023101219054841390000000a",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:474180681466:targetgroup/lb-target-group/a594337f98fbd71a",
            "target_id": "i-0ddb3f32c799034ef"
          },
          "dependencies": [
            "aws_instance.app-host",
            "aws_lb.public-elb",
            "aws_lb_target_group.lb-tg",
            "aws_security_group.allow-elb-bastion-apphost",
            "aws_security_group.allow-web-elb",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "data.aws_instances.app-hosts",
            "data.aws_subnets.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:474180681466:targetgroup/lb-target-group/a594337f98fbd71a-20231012190548329000000009",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:474180681466:targetgroup/lb-target-group/a594337f98fbd71a",
            "target_id": "i-04b4508c5bb9c8527"
          },
          "dependencies": [
            "aws_instance.app-host",
            "aws_lb.public-elb",
            "aws_lb_target_group.lb-tg",
            "aws_security_group.allow-elb-bastion-apphost",
            "aws_security_group.allow-web-elb",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "data.aws_instances.app-hosts",
            "data.aws_subnets.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02a7ff67569643135",
            "association_id": "eipassoc-0b28f89116d115078",
            "connectivity_type": "public",
            "id": "nat-08cc9a5f2cda096b1",
            "network_interface_id": "eni-061410281132d6ab9",
            "private_ip": "172.31.0.203",
            "public_ip": "35.174.46.231",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03c14ae5b0481b727",
            "tags_all": {
              "App": "App Migration"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474180681466:route-table/rtb-0be5170003a68643d",
            "id": "rtb-0be5170003a68643d",
            "owner_id": "474180681466",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08cc9a5f2cda096b1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "App": "App Migration",
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07989cc04f4966ee5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.NAT-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c2a6accfb7dfa72",
            "route_table_id": "rtb-0be5170003a68643d",
            "subnet_id": "subnet-0b1f96397de9d1270"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.NAT-gateway",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "data.aws_subnets.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043a36b120d0f5492",
            "route_table_id": "rtb-0be5170003a68643d",
            "subnet_id": "subnet-0c19eb2d5718e72ed"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.NAT-gateway",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "data.aws_subnets.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-apphost-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474180681466:security-group/sg-0672e97d19875f11c",
            "description": "Allow inbound traffic from app-hosts on port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0672e97d19875f11c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0584028af4aee17b7"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20231012190337413400000007",
            "name_prefix": "terraform-",
            "owner_id": "474180681466",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "App": "App Migration"
            },
            "timeouts": null,
            "vpc_id": "vpc-07989cc04f4966ee5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-elb-bastion-apphost",
            "aws_security_group.allow-web-elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-elb-bastion-apphost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474180681466:security-group/sg-0584028af4aee17b7",
            "description": "Allow SSH 22 from bastion and 80/443/8080 from ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0584028af4aee17b7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP APP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041c28dea805909fc"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041c28dea805909fc"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041c28dea805909fc"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038074cd79522a0d2"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20231012190335477700000003",
            "name_prefix": "terraform-",
            "owner_id": "474180681466",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "App": "App Migration"
            },
            "timeouts": null,
            "vpc_id": "vpc-07989cc04f4966ee5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-web-elb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-web-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474180681466:security-group/sg-041c28dea805909fc",
            "description": "Allow inbound traffic on ports 80, 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041c28dea805909fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20231012190333581000000001",
            "name_prefix": "terraform-",
            "owner_id": "474180681466",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "App": "App Migration"
            },
            "timeouts": null,
            "vpc_id": "vpc-07989cc04f4966ee5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474180681466:subnet/subnet-0b1f96397de9d1270",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1f96397de9d1270",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474180681466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Data": "subnet",
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "App": "App Migration",
              "Data": "subnet",
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-07989cc04f4966ee5"
          }
        },
        {
          "index_key": "private-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474180681466:subnet/subnet-0c19eb2d5718e72ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c19eb2d5718e72ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474180681466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Data": "subnet",
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "App": "App Migration",
              "Data": "subnet",
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-07989cc04f4966ee5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474180681466:subnet/subnet-0bcedecf022ecd705",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcedecf022ecd705",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474180681466",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "App": "App Migration",
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-07989cc04f4966ee5"
          }
        }
      ]
    }
  ]
}